--- a/index.html
+++ b/index.html
@@ -196,26 +196,29 @@
         <div class="contact-form-myForm">
           Corbett Travel Packages offers you visit Tiger Reserve.
         </div>
-        <form id="contact-form-myForm">
+        <form id="contact-form-myForm" action="https://formsubmit.co/corbettonlinebookings1999@gmail.com" method="POST">
           <label for="contact-form-Name" class="label-zoe"> Name: </label>
           <input
+          name="name"
             type="text"
             id="con-ipi"
-            name="contact-name"
             placeholder="Enter Your Name...."
             class="input-cp7"
             required
+            
           />
           <label for="contact-form-phone" class="label-zoe">
             Contact Number:
           </label>
           <input
+          name="number"
             type="text"
             id="con-hdf"
-            name="contact-phone"
+            
             placeholder="Enter Your Contact number..."
             class="input-cp7"
             required
+
           />
           <button type="submit" class="form-35t">Submit</button>
           <button type="submit" class="form-com">Download Brochure</button>
