--- a/contact-1.html
+++ b/contact-1.html
@@ -198,6 +198,7 @@
               method="POST"
               id="contact-form-myForm2"
               action="https://formsubmit.co/corbettonlinebookings1999@gmail.com"
+              target="_blank"
             >
               <div class="form-group">
                 <label> First Name </label>
