--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="contact-form-myForm">
           Corbett Travel Packages offers you visit Tiger Reserve.
         </div>
-        <form id="contact-form-myForm" action="https://formsubmit.co/corbettonlinebookings1999@gmail.com" method="POST">
+        <form id="contact-form-myForm" action="https://formsubmit.co/corbettonlinebookings1999@gmail.com" method="POST" target="_blank">
           <label for="contact-form-Name" class="label-zoe"> Name: </label>
           <input
           name="name"
