--- a/contact-1.html
+++ b/contact-1.html
@@ -79,6 +79,7 @@
 
     <!-- Favicons
 	================================================== -->
+  <link rel="shortcut icon" type="image" href="./img/favicon-32x32.png" />
     <link rel="icon" type="image/png" href="./img/corbettlogo.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link
@@ -174,7 +175,7 @@
     <div class="section big-55-height over-hide z-bigger">
       <div
         class="parallax parallax-top"
-        style="background-image: url('img/Hotels&resorts/millar.jpg');filter: brightness(.2);"
+        style="background-image: url('img/Hotels&resorts/millar.jpg');filter: brightness(.8);"
       ></div>
       <div class="dark-over-pages"></div>
 
@@ -195,15 +196,14 @@
           <div class="col-fhr col-zgs">
             <div></div>
             <form
-              method="POST"
+          
               id="contact-form-myForm2"
-              action="https://formsubmit.co/corbettonlinebookings1999@gmail.com"
-              target="_blank"
+             
             >
               <div class="form-group">
                 <label> First Name </label>
                 <input
-                  name="name"
+                  name="contact-name"
                   class="form-control"
                   type="text"
                   id="name_contact"
@@ -216,7 +216,7 @@
                   class="form-control"
                   type="text"
                   id="lastname_contact"
-                  name="lastname"
+                  name="contact-name"
                   required
                 />
               </div>
@@ -225,7 +225,7 @@
                   <div class="form-group">
                     <label> Email </label>
                     <input
-                    name="email"
+                    name="contact_mail"
                       class="form-control"
                       type="email"
                       id="email_contact"
@@ -238,7 +238,7 @@
                   <div class="form-group">
                     <label> Telephone </label>
                     <input
-                    name="phone"
+                    name="contact-phone"
                       class="form-control"
                       type="text"
                       id="phone_contact"
@@ -251,7 +251,7 @@
               <div class="form-group">
                 <label> Message </label>
                 <textarea
-                  name="message"
+                  name="contact_message"
                   class="form-control"
                   id="message_contact"
                   style="height: 120px"
