--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 
     <!-- Favicons
 	================================================== -->
+  <link rel="shortcut icon" type="image" href="./img/favicon-32x32.png" />
     <link rel="icon" type="image/png" href="./img/corbettlogo.png" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="./img/corbettlogo.png" />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
@@ -168,21 +169,21 @@
         <div>
           <img
             class="logo-smy"
-            src="https://girishjaincompany.com/images/telephone_1667137.png"
+            src="./img/telephone_1667137.png"
           />
           <div class="text-ew6">Instant Call Back</div>
         </div>
         <div>
           <img
             class="logo-smy"
-            src="https://girishjaincompany.com/images/car-insurance_1518610.png"
+            src="img/car-insurance_1518610.png"
           />
           <div class="text-ew6">Free Site Visit</div>
         </div>
         <div>
           <img
             class="logo-smy"
-            src="https://girishjaincompany.com/images/coin_2434461.png"
+            src="img/coin_2434461.png"
           />
           <div class="text-ew6">Unmatched Price</div>
         </div>
@@ -196,10 +197,10 @@
         <div class="contact-form-myForm">
           Corbett Travel Packages offers you visit Tiger Reserve.
         </div>
-        <form id="contact-form-myForm" action="https://formsubmit.co/corbettonlinebookings1999@gmail.com" method="POST" target="_blank">
+        <form id="contact-form-myForm"  >
           <label for="contact-form-Name" class="label-zoe"> Name: </label>
           <input
-          name="name"
+          name="contact-name"
             type="text"
             id="con-ipi"
             placeholder="Enter Your Name...."
@@ -211,7 +212,7 @@
             Contact Number:
           </label>
           <input
-          name="number"
+          name="contact-phone"
             type="text"
             id="con-hdf"
             
