--- a/rooms.html
+++ b/rooms.html
@@ -78,6 +78,7 @@
 
     <!-- Favicons
 	================================================== -->
+  <link rel="shortcut icon" type="image" href="./img/favicon-32x32.png" />
     <link rel="icon" type="image/png" href="./img/corbettlogo.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link
