--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/owl.transitions.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=1" />
     <link rel="stylesheet" href="css/colors/color.css" />
 
     <!-- Favicons
@@ -376,7 +376,7 @@
           </div>
           <div class="col-xl-6 px-0 order-first order-xl-last mt-5 mt-xl-0">
             <div class="img-wrap" id="rev-2">
-              <img src="./img/corbett-tiger.jpg" alt="" style="height: 400px; width: 1000px;"  />
+              <img src="./img/corbett-tiger.jpg" alt="" style="height: 400px; width: 100%;"  />
               <div class="text-element-over"><a href="contact-1.html">The Animal Of Jim Corbett</a></div>
             </div>
           </div>
@@ -996,7 +996,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/reveal-home.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/custom.js?v=1.1"></script>
     <!-- End Document
 ================================================== -->
   </body>
